--- a/assets/css/bbpress.css
+++ b/assets/css/bbpress.css
@@ -5,9 +5,15 @@
 # Widgets
 --------------------------------------------------------------*/
 
+
 /*--------------------------------------------------------------
 # Global bbPress CSS
 --------------------------------------------------------------*/
+
+#bbpress-forums {
+    font-size: inherit;
+}
+
 .page-header .archive-description {
     display: none;
 }
@@ -16,10 +22,10 @@
     margin-top: 1em;
 }
 
-#bbpress-forums ul.bbp-forums, 
-#bbpress-forums ul.bbp-lead-topic, 
-#bbpress-forums ul.bbp-replies, 
-#bbpress-forums ul.bbp-search-results, 
+#bbpress-forums ul.bbp-forums,
+#bbpress-forums ul.bbp-lead-topic,
+#bbpress-forums ul.bbp-replies,
+#bbpress-forums ul.bbp-search-results,
 #bbpress-forums ul.bbp-topics {
     font-size: 14px;
     margin-bottom: 0;
@@ -34,8 +40,8 @@
 #bbpress-forums .widget_display_replies img.avatar,
 #bbpress-forums .widget_display_topics img.avatar,
 #bbpress-forums div.bbp-template-notice img.avatar,
-#bbpress-forums p.bbp-topic-meta img.avatar, 
-#bbpress-forums ul.bbp-reply-revision-log img.avatar, 
+#bbpress-forums p.bbp-topic-meta img.avatar,
+#bbpress-forums ul.bbp-reply-revision-log img.avatar,
 #bbpress-forums ul.bbp-topic-revision-log img.avatar {
     border: 0;
     border-radius: 50%;
@@ -58,29 +64,32 @@
     font-size: 14px;
 }
 
-#bbpress-forums li.bbp-header, 
+#bbpress-forums li.bbp-header,
 #bbpress-forums fieldset.bbp-form {
     background-color: #f9fbff;
 }
 
-#bbpress-forums div.odd, #bbpress-forums ul.odd, 
-#bbpress-forums div.bbp-forum-header, 
-#bbpress-forums div.bbp-topic-header, 
-#bbpress-forums div.bbp-reply-header, 
-.widgetable .bbp-login-form, 
-.widgetable .bbp-logged-in, 
+#bbpress-forums div.odd,
+#bbpress-forums ul.odd,
+#bbpress-forums div.bbp-forum-header,
+#bbpress-forums div.bbp-topic-header,
+#bbpress-forums div.bbp-reply-header,
+.widgetable .bbp-login-form,
+.widgetable .bbp-logged-in,
 #bbpress-forums li.bbp-header,
- #bbpress-forums fieldset.bbp-form {
+#bbpress-forums fieldset.bbp-form {
     background-color: #f9fbff;
 }
 
-#bbpress-forums li.bbp-header, 
+#bbpress-forums li.bbp-header,
 #bbpress-forums li.bbp-footer {
     padding: 20px 35px !important;
 }
 
-div.bbp-forum-header, div.bbp-topic-header, 
-div.bbp-reply-header, li.bbp-body div.hentry {
+div.bbp-forum-header,
+div.bbp-topic-header,
+div.bbp-reply-header,
+li.bbp-body div.hentry {
     padding: 10px 35px;
 }
 
@@ -88,18 +97,19 @@ a#bbp-cancel-reply-to-link {
     margin-right: 15px;
 }
 
-#bbpress-forums li.bbp-body ul.forum, 
+#bbpress-forums li.bbp-body ul.forum,
 #bbpress-forums li.bbp-body ul.topic {
     padding: 25px 35px !important;
     line-height: 1;
 }
 
-#bbpress-forums div.odd, 
+#bbpress-forums div.odd,
 #bbpress-forums ul.odd {
     background: #fff !important;
 }
 
-.mc4wp-form input, a.bbp-forum-title, 
+.mc4wp-form input,
+a.bbp-forum-title,
 a.bbp-topic-permalink {
     line-height: 30px;
     font-weight: 600;
@@ -114,7 +124,7 @@ a.bbp-topic-permalink {
     font-size: 14px;
 }
 
-#bbpress-forums .bbp-forum-info .bbp-forum-content, 
+#bbpress-forums .bbp-forum-info .bbp-forum-content,
 #bbpress-forums p.bbp-topic-meta {
     margin: 15px 0;
 }
@@ -123,15 +133,17 @@ a.bbp-topic-permalink {
     display: none;
 }
 
-#bbpress-forums div.bbp-forum-author img.avatar, 
-#bbpress-forums div.bbp-reply-author img.avatar, 
+#bbpress-forums div.bbp-forum-author img.avatar,
+#bbpress-forums div.bbp-reply-author img.avatar,
 #bbpress-forums div.bbp-topic-author img.avatar {
     border-radius: 50%;
 }
 
+
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
+
 .widget.widget_display_replies li+li,
 .widget.widget_display_views li+li,
 .widget.widget_display_forums li+li,
@@ -150,8 +162,8 @@ a.bbp-topic-permalink {
     text-align: center;
 }
 
-.widget .mc4wp-form input, 
-.widget a.bbp-forum-title, 
+.widget .mc4wp-form input,
+.widget a.bbp-forum-title,
 .widget a.bbp-topic-permalink {
     line-height: inherit;
     font-weight: inherit;
