--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -113,6 +113,7 @@ body .buddypress-wrap .subnav-filters .last select {
     border-radius: 3px;
     box-shadow: none;
     padding: 0 12px;
+    padding-right: 40px;
     color: inherit;
 }
 
@@ -2888,14 +2889,24 @@ table.mycred-table tfoot tr th {
 #badgeos-earned-achievements-container .list>li,
 #badgeos-achievements-container .list>li,
 #badgeos-earned-ranks-container .list>li,
-.earned-user-credits-wrapper .badgeos-credits:nth-child( odd),
-.earned-user-credits-wrapper .badgeos-credits:nth-child( even) {
+.earned-user-credits-wrapper .badgeos-credits:nth-child(odd),
+.earned-user-credits-wrapper .badgeos-credits:nth-child(even),
+.achievement-wrap.earned {
     margin: 1rem;
     padding: 1em !important;
     border: 1px solid var(--global-border-color) !important;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
     border-radius: 8px;
     background: #fff;
+}
+
+.achievement-wrap.earned {
+    margin: 0;
+}
+
+ul.badgeos-achievement-earners-list li img {
+    max-width: 50px;
+    border-radius: 100%;
 }
 
 #badgeos-earned-achievements-container .list>li,
