(#222) Fixed deprecated function notice with buddypress 7.0.0

--- a/assets/css/platform.css
+++ b/assets/css/platform.css
@@ -10,12 +10,21 @@
 # Forums
 # Documents
 # Extra Plugins Support
+    # BuddyPress Sticky Post
+    # BuddyPress Quotes
+    # BuddyPress Moderation Pro
 --------------------------------------------------------------*/
 
 
 /*--------------------------------------------------------------
 # Activity Directory
 --------------------------------------------------------------*/
+
+img.emoji,
+img.emojioneemoji {
+    width: 18px !important;
+    height: 18px !important;
+}
 
 @media screen and (max-width: 46.8em) {
     .activity-update-form #whats-new-avatar {
@@ -56,6 +65,10 @@
 .activity-update-form #whats-new {
     padding: 0;
     border: 0;
+}
+
+#whats-new-attachments.empty {
+    display: none;
 }
 
 .activity-content .bb-activity-media-elem .entry-img {
@@ -315,10 +328,6 @@
 
 .activity-list .activity-item .bp-generic-meta.action .unfav:before {
     color: #db2828;
-}
-
-.bp-nouveau .activity-list .activity-item .activity-meta.action .bp-share-button::before {
-    content: "\e830";
 }
 
 #item-body #group-invites-container {
@@ -677,20 +686,57 @@ span.bbp-author-avatar img {
     margin: 0;
 }
 
-
-/*--------------------------------------------------------------
-# Extra Plugins Support
---------------------------------------------------------------*/
-
-.bpsp-pin-tool[data-bp-tooltip]:before {
-    top: 0;
+.bb-activity-media-wrap .bb-activity-media-elem.document-activity {
+    margin-left: 6px;
 }
 
+
+/*--------------------------------------------------------------
+## BuddyPress Sticky Post
+--------------------------------------------------------------*/
+
+.bpsp-pin-tool[data-bp-tooltip]:before,
 .bpsp-pin-tool[data-bp-tooltip]:after {
-    top: -30px;
-    left: 0;
+    display: none;
 }
 
 .blpro-locked-title-header {
     margin-top: 1rem;
+}
+
+#buddypress .activity-list .activity-item .activity-content>.bp-generic-meta.action .button.bpsp-pin-tool .fa {
+    font-size: 14px;
+    margin-right: 2px;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Quotes
+--------------------------------------------------------------*/
+
+body.wb-quote .buddypress-wrap #whats-new-textarea {
+    padding: 0;
+}
+
+body.wb-quote .activity-update-form #whats-new {
+    min-height: 70px;
+    padding: 12px 15px;
+    border-radius: 0;
+}
+
+
+/*--------------------------------------------------------------
+## BuddyPress Moderation Pro
+--------------------------------------------------------------*/
+
+#buddypress .activity-list .activity-item .activity-content>.bp-generic-meta.action .button.bmpro-flag-activity-btn::before {
+    content: "\f227";
+    font-family: dashicons;
+    opacity: 1;
+    background: none;
+    position: relative;
+}
+
+#buddypress .activity-list .activity-item .activity-content>.bp-generic-meta.action .button.bmpro-flag-activity-btn::after {
+    content: none;
 }
