--- a/assets/css/buddyx-amp.css
+++ b/assets/css/buddyx-amp.css
@@ -2,6 +2,7 @@
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Header
+# Post
 # Widgets
 --------------------------------------------------------------*/
 
@@ -79,6 +80,32 @@ body.buddyx-amp .site-header-wrapper {
     body.admin-bar.buddyx-amp .main-navigation .primary-menu-container {
         top: 0;
     }
+}
+
+
+/*--------------------------------------------------------------
+# Post
+--------------------------------------------------------------*/
+
+body.home.buddyx-amp .site-sub-header {
+    display: none;
+}
+
+.buddyx-amp .post-layout {
+    display: flex;
+    flex-flow: wrap;
+}
+
+.buddyx-amp .grid-sizer {
+    display: none;
+}
+
+amp-img.amp-wp-enforced-sizes[layout="intrinsic"]>img {
+    object-fit: cover;
+}
+
+.buddyx-amp .post-navigation {
+    clear: both;
 }
 
 
